# vcg-mechanism

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  agv.py  auctions.py  facility.py  manipulation.py  public_goods.py  vcg.py
src/viz/: __init__.py  app.py
tests/: test_auctions.py  test_public_goods.py  test_truthfulness.py  test_vcg.py
